##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(phoenix_mission_planner)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED rosjava_build_tools)

catkin_package()

